--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <main class="social">
       <div class="bg-top"></div>
       <div class="bg-bottom"></div>
+
       <header class="social__header">
         <h1 class="social__title">
           10,000+ of our users love our products.
@@ -46,7 +47,7 @@
       </header>
 
       <section class="social__proof">
-        <div class="social__content">
+        <div class="social__content social__content--left">
           <div class="social__starts">
             <img src="images/icon-star.svg" alt="estrellas" class="social__icon">
             <img src="images/icon-star.svg" alt="estrellas" class="social__icon">
@@ -74,7 +75,7 @@
           </p>
         </div>
         
-        <div class="social__content">
+        <div class="social__content social__content--right">
           <div class="social__starts">
             <img src="images/icon-star.svg" alt="estrellas" class="social__icon">
             <img src="images/icon-star.svg" alt="estrellas" class="social__icon">
@@ -90,8 +91,7 @@
       </section>
 
       <section class="social__cards">
-        
-        <article class="card">
+        <article class="card card--top">
           <div class="card__user">
             <img src="images/image-colton.jpg" alt="perfíl de usuario" class="card__profile">
 
@@ -119,9 +119,9 @@
           <blockquote class="card__text">
             "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
           </blockquote>
-        </article>
+        </article> 
 
-        <article class="card">
+        <article class="card card--down">
           <div class="card__user">
             <img src="images/image-anne.jpg" alt="perfíl de usuario" class="card__profile">
 
